# adk_user_simulator_poc

./: .gitignore  README.md  pyproject.toml
footy_finder/: agent.py  eval_config.json  eval_genai_enterprise.py  eval_set_1.evalset.json  eval_set_with_scenarios.evalset.json  eval_vertexai.py  run_adk_eval.sh  sample_conversations.json  session.json  test_adk_eval_with_scenarios.py
