[project]
name = "adk-user-simulator-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk[eval]>=2.1.0",
    "pytest==9.0.3",
    "fastapi==0.136.0",
    "uvicorn==0.44.0",
    "pydantic>=2.9.0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.3",
    "pytest-asyncio>=1.3.0",
    "google-cloud-aiplatform[evaluation]>=1.148.1",
]
