[project]
name = "adk-user-simulator-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk[a2a,eval]>=1.0.0",
    "pytest==9.0.3",
    "fastapi==0.136.0",
    "uvicorn==0.44.0",
    "pydantic>=2.9.0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.3",
    "pytest-asyncio>=1.3.0",
    "google-cloud-aiplatform[adk,ag2,agent-engines,evaluation,langchain,llama-index]>=1.153.1",
    "google-genai>=1.75.0",
]
[tool.setuptools]
package-dir = {"" = "../.."}
packages = ["footy_finder"]

[tool.pytest.ini_options]
pythonpath = ["..", "."]
python_files = ["test_*.py"]
